--- a/NppColHighlight_private.rc
+++ b/NppColHighlight_private.rc
@@ -3,32 +3,32 @@
 
 #include <windows.h> // include for version info constants
 
+
 //
 // TO CHANGE VERSION INFORMATION, EDIT PROJECT OPTIONS...
 //
 1 VERSIONINFO
 FILEVERSION 1,0,1,1
 PRODUCTVERSION 1,0,1,1
-FILETYPE VFT_APP
+FILETYPE VFT_DLL
 {
   BLOCK "StringFileInfo"
-	 {
-		 BLOCK "040904E4"
-		 {
-			 VALUE "CompanyName", "Vin's World"
-			 VALUE "FileVersion", ""
-			 VALUE "FileDescription", "Notepad++ Plugin to hightlight current column."
-			 VALUE "InternalName", "Notepad++ Column Highlight"
-			 VALUE "LegalCopyright", "Copyright (C) VinsWorld. All Rights Reserved."
-			 VALUE "LegalTrademarks", ""
-			 VALUE "OriginalFilename", ""
-			 VALUE "ProductName", "NPPCOLHIGHLIGHT"
-			 VALUE "ProductVersion", "1.0.1.1"
-		 }
-	 }
+  {
+    BLOCK "040904E4"
+    {
+      VALUE "CompanyName", "Vin's World"
+      VALUE "FileVersion", "1.0.1.1"
+      VALUE "FileDescription", "Notepad++ Plugin to hightlight current column."
+      VALUE "InternalName", "Notepad++ Column Highlight"
+      VALUE "LegalCopyright", "Copyright (C) VinsWorld. All Rights Reserved."
+      VALUE "LegalTrademarks", ""
+      VALUE "OriginalFilename", ""
+      VALUE "ProductName", "NPPCOLHIGHLIGHT"
+      VALUE "ProductVersion", "1.0.1.1"
+    }
+  }
   BLOCK "VarFileInfo"
-	 {
-		 VALUE "Translation", 0x0409, 1252
-	 }
+  {
+    VALUE "Translation", 0x0409, 1252
+  }
 }
-
