Alt keyboard shortcut for OK in Settings dialog

--- a/ColumnTools.rc
+++ b/ColumnTools.rc
@@ -36,7 +36,7 @@ CAPTION "Column Tools Settings"
 FONT 8,"MS Sans Serif",0,0,0
 STYLE WS_POPUP|WS_VISIBLE|WS_CAPTION|WS_SYSMENU|DS_SHELLFONT
 BEGIN
-  CONTROL "OK",IDB_OK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,90,70,50,14
+  CONTROL "&OK",IDB_OK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,90,70,50,14
   CONTROL "&Backspace Unindents",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_GROUP,22,16,100,11
   CONTROL "",IDC_CHK_BSU,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTOCHECKBOX,10,15,10,9
   CONTROL "&Indent Guides LookForward",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_GROUP,22,36,100,11
