--- a/ColumnTools.rc
+++ b/ColumnTools.rc
@@ -31,16 +31,19 @@ FILETYPE VFT_APP
     }
 }
 
-IDD_SETTINGS DIALOGEX 26,41,170,100
+IDD_SETTINGS DIALOGEX 26,41,170,115
 CAPTION "Column Tools Settings"
-FONT 8,"MS Sans Serif",0,0,0
+FONT 8,"MS Shell Dlg",0,0,0
 STYLE WS_POPUP|WS_VISIBLE|WS_CAPTION|WS_SYSMENU|DS_SHELLFONT
 BEGIN
-  CONTROL "&OK",IDB_OK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,90,70,50,14
+  CONTROL "&OK",IDB_OK,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP,90,90,50,14
   CONTROL "&Backspace Unindents",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_GROUP,22,16,100,11
   CONTROL "",IDC_CHK_BSU,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTOCHECKBOX,10,15,10,9
   CONTROL "&Indent Guides LookForward",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_GROUP,22,36,100,11
   CONTROL "",IDC_CHK_IGLF,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTOCHECKBOX,10,35,10,9
-  CONTROL "Version",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_DISABLED|WS_GROUP,10,70,30,11
-  CONTROL "<a></a>",IDC_STC_VER,"SysLink",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|LWS_TRANSPARENT,40,70,40,11
+  CONTROL "Start Ruler at:",IDC_GRP1,"Button",WS_CHILDWINDOW|WS_VISIBLE|BS_GROUPBOX,10,54,72,27
+  CONTROL "0",IDC_RBN_0,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTORADIOBUTTON,21,65,18,9
+  CONTROL "1",IDC_RBN_1,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTORADIOBUTTON,51,65,18,9
+  CONTROL "Version",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_DISABLED|WS_GROUP,10,90,30,11
+  CONTROL "<a></a>",IDC_STC_VER,"SysLink",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|LWS_TRANSPARENT,40,90,40,11
 END
