add Alt options for 0,1 in settings dialogue

--- a/ColumnTools.rc
+++ b/ColumnTools.rc
@@ -42,8 +42,8 @@ BEGIN
   CONTROL "&Indent Guides LookForward",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_GROUP,22,36,100,11
   CONTROL "",IDC_CHK_IGLF,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTOCHECKBOX,10,35,10,9
   CONTROL "Start Ruler at:",IDC_GRP1,"Button",WS_CHILDWINDOW|WS_VISIBLE|BS_GROUPBOX,10,54,72,27
-  CONTROL "0",IDC_RBN_0,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTORADIOBUTTON,21,65,18,9
-  CONTROL "1",IDC_RBN_1,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTORADIOBUTTON,51,65,18,9
+  CONTROL "&0",IDC_RBN_0,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTORADIOBUTTON,21,65,18,9
+  CONTROL "&1",IDC_RBN_1,"Button",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|BS_AUTORADIOBUTTON,51,65,18,9
   CONTROL "Version",IDC_STATIC,"Static",WS_CHILDWINDOW|WS_VISIBLE|WS_DISABLED|WS_GROUP,10,90,30,11
   CONTROL "<a></a>",IDC_STC_VER,"SysLink",WS_CHILDWINDOW|WS_VISIBLE|WS_TABSTOP|LWS_TRANSPARENT,40,90,40,11
 END
